<resources>
    <string name="app_name">TFG</string>

    <!-- LOGIN ACTIVITY -->
    <string name="tvUsuario">Usuario</string>
    <string name="tvContrasenia">Contraseña</string>
    <string name="hintContrasenia">Introduzca la Contraseña</string>
    <string name="tvIniciarSesion">Iniciar Sesión</string>
    <string name="hintUsuario">Introduzca su Usuario</string>

    <!-- DETALLE ACTIVITY -->
    <string name="cd_detalle_logo">Icono Gasolinera</string>
    <string name="text_detalle_rotulo">Rótulo Gasolinera</string>
    <string name="text_detalle_direccion">Dirección completa</string>
    <string name="text_detalle_horario">Horario</string>
    <string name="text_detalle_precios_titulo">PRECIOS DISPONIBLES:</string>
    <string name="text_detalle_btn_llegar">CÓMO LLEGAR (GPS)</string>

    <!-- MAPA ACTIVITY -->
    <string name="cd_mapa_logo">Logo Fuel4Less</string>
    <string name="text_mapa_buscador">Buscador Municipio (x ejemplo)</string>
    <string name="cd_mapa_filtros">Filtros</string>
    <string name="cd_mapa_btn_ruta">Calcular ruta</string>
    <string name="cd_mapa_btn_ubicacion">Ir a mi ubicación</string>
    <string name="text_mapa_menu_inferior">FRAGMENT MENU INFERIOR\n( Inicio |  Favoritas |  Ajustes)</string>

    <!-- RUTA ACTIVITY -->
    <string name="text_ruta_titulo">🗺️ Gasolineras en ruta</string>
    <string name="hint_ruta_origen">📍 Origen  (ej: Valladolid)</string>
    <string name="hint_ruta_destino">🔴 Destino  (ej: Bilbao)</string>
    <string name="text_ruta_btn_calcular">CALCULAR RUTA</string>
    <string name="text_ruta_btn_limpiar">LIMPIAR</string>

    <!-- MARKER PRECIO -->
    <string name="cd_marker_logo">Logo de la marca</string>

</resources>