<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center_horizontal"
    android:background="#FAFAFA">

    <!-- Icono decorativo -->
    <ImageView
        android:id="@+id/imgDetalleLogo"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/ic_default"
        android:layout_marginBottom="16dp" 
        android:contentDescription="@string/cd_detalle_logo"/>

    <TextView
        android:id="@+id/txtDetalleRotulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#212121"
        android:text="@string/text_detalle_rotulo"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/txtDetalleDireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="#555555"
        android:text="@string/text_detalle_direccion"
        android:gravity="center"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/txtDetalleHorario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="#777777"
        android:text="@string/text_detalle_horario"
        android:layout_marginBottom="24dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_detalle_precios_titulo"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/txtDetallePrecios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:lineSpacingExtra="4dp"
        android:textColor="#212121"
        android:background="#EEEEEE"
        android:padding="16dp"
        android:layout_marginBottom="32dp"/>

    <!-- El magico boton para que el usuario no se pierda -->
    <Button
        android:id="@+id/btnIrMaps"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/text_detalle_btn_llegar"
        android:textSize="18sp"
        android:textStyle="bold"
        android:backgroundTint="#0056b3"
        android:textColor="@android:color/white"/>

</LinearLayout>
