<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azul"
    tools:context=".ui.MainActivity">

    <RelativeLayout
        android:layout_width="361dp"
        android:layout_height="300dp"
        android:background="@drawable/borde_blanco"
        android:backgroundTint="@color/grisaceo"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.471">

        <LinearLayout
            android:id="@+id/nombre"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/tvUsuario"
                android:textColor="@color/verde"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etUsuario"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:ems="10"
                android:fontFamily="@font/quicksand_bold"
                android:hint="@string/hintUsuario"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/contrasenia"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/nombre"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvContrasenia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/tvContrasenia"
                android:textColor="@color/verde"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etContrasenia"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:ems="10"
                android:fontFamily="@font/quicksand_bold"
                android:hint="@string/hintContrasenia"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnRegistrarse"
            android:layout_width="216dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/contrasenia"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/verde"
            android:text="@string/tvIniciarSesion"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:cornerRadius="10dp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tvIniciarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/tvIniciarSesion"
        android:textColor="@color/grisaceo"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.147" />
</androidx.constraintlayout.widget.ConstraintLayout>